added new shadows and favicon - worked on testimonials

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,4 +1,5 @@
 <div class="about-me-section" id="about-me">
+    <img class="red-shadow" src="../../assets/red_shade_01.png" alt="Red Shadow" />
     <div class="about-me-left">
         <h1>About me</h1>
         <p>Hey there! I'm Gloria, a frontend developer fueled by a
