--- a/src/app/testimonials/testimonials.component.scss
+++ b/src/app/testimonials/testimonials.component.scss
@@ -12,9 +12,9 @@
   box-sizing: border-box;
   overflow: visible;
   background-image: url('../../assets/green_shade_02.png');
-  background-size: contain; 
+  background-size: 1500px 400px; 
   background-repeat: no-repeat;
-  background-position: 115% 30%;
+  background-position: 1600px 10px;
   // border: 1px solid yellow;
 }
 
@@ -162,12 +162,23 @@
   background-color: #ff3f79;
 }
 
+@media (max-width: 1700px) {
+  .testimonial-container {
+    background-position: 1340px 10px;
+  }
+  }
+
+@media (max-width: 1440px) {
+.testimonial-container {
+  background-position: 1100px 10px;
+}
+}
+
 @media (max-width: 1200px) {
 
   .testimonial-container {
-    background-size: 630px; /* Alternativ: cover, contain */
-    background-position: 180% 0%;
-    // border: 1px solid yellow;
+    background-size: 1000px 500px; 
+    background-position: 700px 10px;
   }
 
   .single-testimonial {
@@ -192,7 +203,8 @@
 @media (max-width: 768px) {
   .testimonial-container {
     padding: 12px 50px;
-  }
+    background-position: 400px 10px;
+    }
 
   .quote-container {
     padding: 24px 48px;
@@ -209,6 +221,7 @@
 
 @media (max-width: 560px) {
   .testimonial-container {
+    background-position: 150px 10px;
     padding: 12px 25px;
     font-size: 0.9rem;
   }
