--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,6 +9,6 @@
             <a href="#"><img src="../../assets/intro-icon-linkedin.png" alt=""></a>
         </div>
     </div>
-    <div class="footer-imprint"><a href="#"><p>Imprint</p></a></div>
+    <div class="footer-imprint"><a routerLink="/imprint"><p>Imprint</p></a></div>
 </div>
 
