--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -3,7 +3,7 @@
     max-width: 800px;
     margin: 0 auto;
     font-family: Arial, sans-serif;
-    color: #333;
+    color: #FFFFFF;
   
     h1 {
       font-size: 2rem;
