--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -64,7 +64,7 @@
     </div>
   </div>
   <div class="arrow-wrapper">
-    <a href="#header">
+    <a href="#intro">
       <img [src]="arrowSrc" alt="arrow" class="arrow" (mouseover)="swapArrow(true)" (mouseout)="swapArrow(false)" />
     </a>
   </div>
