--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -11,6 +11,7 @@
   height: 100vh;
   max-width: 100vw;
   margin: 0 auto;
+  padding-top: 100px;
   box-sizing: border-box;
   justify-content: center;
   align-items: center;
