--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,31 +3,32 @@
 
 /* poppins-regular - latin */
 @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    src: url('../src/assets/fonts/poppins-v21-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../src/assets/fonts/poppins-v21-latin-regular.woff2")
+    format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 html {
-    background-color: #141D2F;
-    font-family: 'Poppins', sans-serif; 
-    color: white;
-    display: flex;
-    flex-direction: column;
-    scroll-behavior: smooth;
-    min-height: 100%;
+  background-color: #141d2f;
+  font-family: "Poppins", sans-serif;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  scroll-behavior: smooth;
+  min-height: 100%;
 }
 
 body {
-    margin: 0;
+  margin: 0;
 }
 
 .scrollStop {
-    position: fixed;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-  }
-  
+  position: fixed;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
