--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -68,4 +68,5 @@
       <img [src]="arrowSrc" alt="arrow" class="arrow" (mouseover)="swapArrow(true)" (mouseout)="swapArrow(false)" />
     </a>
   </div>
+  <div class="popup-banner" *ngIf="showPopup" [style.backgroundColor]="popupColor">{{ popupMessage }}</div>
 </div>
