--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -1,22 +1,36 @@
 .imprint-section {
-    padding: 20px;
-    max-width: 800px;
     margin: 0 auto;
     font-family: Arial, sans-serif;
     color: #FFFFFF;
+    font-family: Poppins, sans-serif;
   
     h1 {
-      font-size: 2rem;
-      margin-bottom: 20px;
+      font-size: 5.6rem;
+      margin-block-start: 0.1em;
+      margin-block-end: 0.1em;
     }
   
     h2 {
       font-size: 1.5rem;
       margin-top: 20px;
     }
+
+    h3 a {
+      color: #00bf89;
+    }
   
     p {
       line-height: 1.6;
     }
+
+    a {
+      text-decoration: none;
+      cursor: pointer;
+      color: white;
+    };
+  }
+
+  .imprint-wrapper {
+    padding: 100px 100px;
   }
   
