fixed svg issue - added alt attributes - added custom scrollbar - added link openers

--- a/src/app/contact-form/contact-form.component.html
+++ b/src/app/contact-form/contact-form.component.html
@@ -67,7 +67,7 @@
   </div>
   <div class="arrow-wrapper">
     <a href="#intro">
-      <img [src]="arrowSrc" alt="arrow" class="arrow" (mouseover)="swapArrow(true)" (mouseout)="swapArrow(false)" />
+      <img [src]="arrowSrc" alt="picture of an arrow pointing upwards for navigating back up" class="arrow" (mouseover)="swapArrow(true)" (mouseout)="swapArrow(false)" />
     </a>
   </div>
   <div class="popup-banner" *ngIf="showPopup" [style.backgroundColor]="popupColor">{{ popupMessage }}</div>
