--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,28 +1,32 @@
 <header id="header">
-    <a href="#header"><img src="../../assets/Logo_gs_02.png" alt="Logo" id="logo" /></a>
-    <div
-      class="icon nav-icon-4"
-      (click)="toggleMenu()"
-      [class.open]="isMenuOpen"
-    >
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
+  <!-- Logo -->
+  <a href="#header">
+      <img src="../../assets/Logo_gs_02.png" alt="Website logo: Gloria Schaffarczyk" id="logo" />
+  </a>
   
-    <!-- Desktop-Links -->
-    <nav class="desktop-nav">
-      <a href="#about-me">About me</a>
-      <a href="#skills">Skills</a>
-      <a href="#portfolio">Portfolio</a>
-    </nav>
-  
-    <!-- Mobile-Links -->
-    <nav class="mobile-menu" [class.open]="isMenuOpen">
-      <a href="#about-me" (click)="closeMenu()">About me</a>
-      <a href="#skills" (click)="closeMenu()">Skills</a>
-      <a href="#portfolio" (click)="closeMenu()">Portfolio</a>
-      <a href="#contact" (click)="closeMenu()">Contact</a>
-    </nav>
-  </header>
-  
+  <!-- Hamburger Icon for mobile menu -->
+  <div
+    class="icon nav-icon-4"
+    (click)="toggleMenu()"
+    [class.open]="isMenuOpen"
+  >
+    <span aria-hidden="true"></span>
+    <span aria-hidden="true"></span>
+    <span aria-hidden="true"></span>
+  </div>
+
+  <!-- Desktop Navigation Links -->
+  <nav class="desktop-nav">
+    <a href="#about-me">About me</a>
+    <a href="#skills">Skills</a>
+    <a href="#portfolio">Portfolio</a>
+  </nav>
+
+  <!-- Mobile Navigation Links -->
+  <nav class="mobile-menu" [class.open]="isMenuOpen">
+    <a href="#about-me" (click)="closeMenu()">About me</a>
+    <a href="#skills" (click)="closeMenu()">Skills</a>
+    <a href="#portfolio" (click)="closeMenu()">Portfolio</a>
+    <a href="#contact" (click)="closeMenu()">Contact</a>
+  </nav>
+</header>
