--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -74,7 +74,7 @@
         The responsible party is the natural or legal person who alone or jointly with others decides on the purposes and means of
         processing personal data (e.g., names, email addresses, etc.).
       </p>
-      <p><strong>Source:</strong> <a href="https://www.e-recht24.de">https://www.e-recht24.de</a></p>
+      <p><strong>Source:</strong> <a target="_blank" rel="noopener noreferrer" href="https://www.e-recht24.de"> https://www.e-recht24.de</a></p>
       <h3><a routerLink="/">Back to homepage</a></h3>
     </div>
   </div>
