--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,8 +12,10 @@
             <a href="mailto:gloria.schaffarczyk@gmail.com">
                 <img src="../../assets/intro-icon-email.png" alt="Envelope icon for contacting Gloria via email">
             </a>
-            <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/gloria-schaffarczyk-bb2a88205">
-                <img src="../../assets/intro-icon-linkedin.png" alt="LinkedIn logo linking to Gloria's LinkedIn profile">
+            <a target="_blank" rel="noopener noreferrer"
+                href="https://www.linkedin.com/in/gloria-schaffarczyk-bb2a88205">
+                <img src="../../assets/intro-icon-linkedin.png"
+                    alt="LinkedIn logo linking to Gloria's LinkedIn profile">
             </a>
         </div>
     </div>
