--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -1,81 +1,97 @@
 <div class="privacy-policy-section">
-    <div class="privacy-policy-wrapper">
-      <h1>Privacy Policy</h1>
-      <p><strong>Overview of Data Protection</strong></p>
-      <p>
-        The following information provides a simple overview of what happens to your personal data when you visit this website.
-        Personal data refers to all data that can personally identify you. Detailed information on data protection can be found
-        in the privacy policy outlined below.
-      </p>
-      <p><strong>Data Collection on This Website</strong></p>
-      <p>
-        <strong>Who is responsible for the data collection on this website?</strong><br>
-        The data processing on this website is carried out by the website operator. Their contact details can be found in the section
-        "Notice Regarding the Responsible Party" in this privacy policy.
-      </p>
-      <p>
-        <strong>How do we collect your data?</strong><br>
-        Your data is collected on the one hand by you providing it to us. This may include data that you enter into a contact form.
-      </p>
-      <p>
-        Other data is collected automatically or with your consent when you visit the website through our IT systems. This
-        primarily includes technical data (e.g., internet browser, operating system, or time of page access). This data is
-        collected automatically as soon as you enter this website.
-      </p>
-      <p>
-        <strong>What do we use your data for?</strong><br>
-        Some of the data is collected to ensure the error-free provision of the website. Other data can be used to analyze your user behavior.
-      </p>
-      <p><strong>Hosting</strong></p>
-      <p>
-        We host the content of our website with the following provider:<br><br>
-        <strong>Strato</strong><br>
-        The provider is Strato AG, Otto-Ostrowski-Straße 7, 10249 Berlin (hereinafter referred to as "Strato"). When you visit our
-        website, Strato collects various log files, including your IP addresses.<br>
-        For more information, please refer to Strato's privacy policy: 
-        <a href="https://www.strato.de/datenschutz/" target="_blank" rel="noopener noreferrer">https://www.strato.de/datenschutz/</a>.
-      </p>
-      <p>
-        The use of Strato is based on Article 6(1)(f) of the GDPR. We have a legitimate interest in ensuring a reliable presentation of
-        our website. If consent has been requested, processing will be carried out exclusively on the basis of Article 6(1)(a) of the
-        GDPR and § 25(1) TDDG, insofar as consent includes the storage of cookies or access to user terminal device information
-        (e.g., device fingerprinting) under the TDDG. Consent can be revoked at any time.
-      </p>
-      <p>
-        <strong>Order Processing</strong><br>
-        We have concluded an order processing agreement (OPA) with the above-mentioned provider. This is a data protection
-        agreement required by law to ensure that the provider processes the personal data of our website visitors only in accordance
-        with our instructions and in compliance with the GDPR.
-      </p>
-      <p><strong>General Information and Mandatory Disclosures</strong></p>
-      <p>
-        <strong>Data Protection</strong><br>
-        The operators of these pages take the protection of your personal data very seriously. We treat your personal data confidentially
-        and in accordance with statutory data protection regulations and this privacy policy.
-      </p>
-      <p>
-        When you use this website, various personal data is collected. Personal data is data that can personally identify you. This
-        privacy policy explains what data we collect and what we use it for. It also explains how and for what purpose this is done.
-      </p>
-      <p>
-        We would like to point out that data transmission over the Internet (e.g., communication via email) can have security gaps.
-        Complete protection of data against access by third parties is not possible.
-      </p>
-      <p>
-        <strong>Notice Regarding the Responsible Party</strong><br>
-        The responsible party for data processing on this website is:<br>
-        Gloria Schaffarczyk<br>
-        Rottachstr. 34<br>
-        87439 Kempten<br>
-        Phone: 017686715651<br>
-        Email: gloria(at)gmail.com
-      </p>
-      <p>
-        The responsible party is the natural or legal person who alone or jointly with others decides on the purposes and means of
-        processing personal data (e.g., names, email addresses, etc.).
-      </p>
-      <p><strong>Source:</strong> <a target="_blank" rel="noopener noreferrer" href="https://www.e-recht24.de"> https://www.e-recht24.de</a></p>
-      <h3><a routerLink="/">Back to homepage</a></h3>
-    </div>
+  <div class="privacy-policy-wrapper">
+    <h1>Privacy Policy</h1>
+    <p><strong>Overview of Data Protection</strong></p>
+    <p>
+      The following information provides a simple overview of what happens to your personal data when you visit this
+      website.
+      Personal data refers to all data that can personally identify you. Detailed information on data protection can be
+      found
+      in the privacy policy outlined below.
+    </p>
+    <p><strong>Data Collection on This Website</strong></p>
+    <p>
+      <strong>Who is responsible for the data collection on this website?</strong><br>
+      The data processing on this website is carried out by the website operator. Their contact details can be found in
+      the section
+      "Notice Regarding the Responsible Party" in this privacy policy.
+    </p>
+    <p>
+      <strong>How do we collect your data?</strong><br>
+      Your data is collected on the one hand by you providing it to us. This may include data that you enter into a
+      contact form.
+    </p>
+    <p>
+      Other data is collected automatically or with your consent when you visit the website through our IT systems. This
+      primarily includes technical data (e.g., internet browser, operating system, or time of page access). This data is
+      collected automatically as soon as you enter this website.
+    </p>
+    <p>
+      <strong>What do we use your data for?</strong><br>
+      Some of the data is collected to ensure the error-free provision of the website. Other data can be used to analyze
+      your user behavior.
+    </p>
+    <p><strong>Hosting</strong></p>
+    <p>
+      We host the content of our website with the following provider:<br><br>
+      <strong>Strato</strong><br>
+      The provider is Strato AG, Otto-Ostrowski-Straße 7, 10249 Berlin (hereinafter referred to as "Strato"). When you
+      visit our
+      website, Strato collects various log files, including your IP addresses.<br>
+      For more information, please refer to Strato's privacy policy:
+      <a href="https://www.strato.de/datenschutz/" target="_blank"
+        rel="noopener noreferrer">https://www.strato.de/datenschutz/</a>.
+    </p>
+    <p>
+      The use of Strato is based on Article 6(1)(f) of the GDPR. We have a legitimate interest in ensuring a reliable
+      presentation of
+      our website. If consent has been requested, processing will be carried out exclusively on the basis of Article
+      6(1)(a) of the
+      GDPR and § 25(1) TDDG, insofar as consent includes the storage of cookies or access to user terminal device
+      information
+      (e.g., device fingerprinting) under the TDDG. Consent can be revoked at any time.
+    </p>
+    <p>
+      <strong>Order Processing</strong><br>
+      We have concluded an order processing agreement (OPA) with the above-mentioned provider. This is a data protection
+      agreement required by law to ensure that the provider processes the personal data of our website visitors only in
+      accordance
+      with our instructions and in compliance with the GDPR.
+    </p>
+    <p><strong>General Information and Mandatory Disclosures</strong></p>
+    <p>
+      <strong>Data Protection</strong><br>
+      The operators of these pages take the protection of your personal data very seriously. We treat your personal data
+      confidentially
+      and in accordance with statutory data protection regulations and this privacy policy.
+    </p>
+    <p>
+      When you use this website, various personal data is collected. Personal data is data that can personally identify
+      you. This
+      privacy policy explains what data we collect and what we use it for. It also explains how and for what purpose
+      this is done.
+    </p>
+    <p>
+      We would like to point out that data transmission over the Internet (e.g., communication via email) can have
+      security gaps.
+      Complete protection of data against access by third parties is not possible.
+    </p>
+    <p>
+      <strong>Notice Regarding the Responsible Party</strong><br>
+      The responsible party for data processing on this website is:<br>
+      Gloria Schaffarczyk<br>
+      Rottachstr. 34<br>
+      87439 Kempten<br>
+      Phone: 017686715651<br>
+      Email: gloria(at)gmail.com
+    </p>
+    <p>
+      The responsible party is the natural or legal person who alone or jointly with others decides on the purposes and
+      means of
+      processing personal data (e.g., names, email addresses, etc.).
+    </p>
+    <p><strong>Source:</strong> <a target="_blank" rel="noopener noreferrer" href="https://www.e-recht24.de">
+        https://www.e-recht24.de</a></p>
+    <h3><a routerLink="/">Back to homepage</a></h3>
   </div>
-  
+</div>
