--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,11 +1,11 @@
 // Fonts
-$font-primary: 'poppins', 'sans-serif';
+$font-primary: "poppins", "sans-serif";
 $text-color: #fff;
 $font-size: 1.4rem;
 
 //  Colors
-$color-dark: #141D2F;
-$color-light: #FFFFFF;
+$color-dark: #141d2f;
+$color-light: #ffffff;
 $primary-color: #00bf89;
 $secondary-color: #ff3f79;
 
