--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,11 @@
 <header id="header">
   <!-- Logo -->
   <a href="#header">
-      <img src="../../assets/Logo_gs_02.png" alt="Website logo: Gloria Schaffarczyk" id="logo" />
+    <img src="../../assets/Logo_gs_02.png" alt="Website logo: Gloria Schaffarczyk" id="logo" />
   </a>
-  
+
   <!-- Hamburger Icon for mobile menu -->
-  <div
-    class="icon nav-icon-4"
-    (click)="toggleMenu()"
-    [class.open]="isMenuOpen"
-  >
+  <div class="icon nav-icon-4" (click)="toggleMenu()" [class.open]="isMenuOpen">
     <span aria-hidden="true"></span>
     <span aria-hidden="true"></span>
     <span aria-hidden="true"></span>
