--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -11,22 +11,71 @@
       Email: <a href='mailto:gloria.schaffarczyk@gmail.com'>gloria.schaffarczyk(at)gmail.com</a><br></p>
     <p><strong>Disclaimer:</strong><br><br>
       <strong>Liability for Content</strong><br><br>
-      The content of our pages has been created with the utmost care. However, we cannot guarantee the accuracy, completeness, or timeliness of the content. As a service provider, we are responsible for our own content on these pages in accordance with § 7 para.1 DDG under general laws. However, pursuant to §§ 8 to 10 DDG, as service providers, we are not obliged to monitor transmitted or stored third-party information or investigate circumstances indicating illegal activity. Obligations to remove or block the use of information under general laws remain unaffected. Liability in this regard is, however, only possible from the time of knowledge of a specific infringement. Upon becoming aware of any such legal violations, we will remove this content immediately.<br><br>
+      The content of our pages has been created with the utmost care. However, we cannot guarantee the accuracy,
+      completeness, or timeliness of the content. As a service provider, we are responsible for our own content on these
+      pages in accordance with § 7 para.1 DDG under general laws. However, pursuant to §§ 8 to 10 DDG, as service
+      providers, we are not obliged to monitor transmitted or stored third-party information or investigate
+      circumstances indicating illegal activity. Obligations to remove or block the use of information under general
+      laws remain unaffected. Liability in this regard is, however, only possible from the time of knowledge of a
+      specific infringement. Upon becoming aware of any such legal violations, we will remove this content
+      immediately.<br><br>
       <strong>Liability for Links</strong><br><br>
-      Our offer contains links to external websites of third parties over whose content we have no control. Therefore, we cannot assume any liability for this third-party content. The respective provider or operator of the pages is always responsible for the content of the linked pages. The linked pages were checked for possible legal violations at the time of linking. Illegal content was not discernible at the time of linking. A permanent content control of the linked pages is not reasonable without concrete evidence of a legal violation. If we become aware of any legal violations, we will remove such links immediately.<br><br>
+      Our offer contains links to external websites of third parties over whose content we have no control. Therefore,
+      we cannot assume any liability for this third-party content. The respective provider or operator of the pages is
+      always responsible for the content of the linked pages. The linked pages were checked for possible legal
+      violations at the time of linking. Illegal content was not discernible at the time of linking. A permanent content
+      control of the linked pages is not reasonable without concrete evidence of a legal violation. If we become aware
+      of any legal violations, we will remove such links immediately.<br><br>
       <strong>Copyright</strong><br><br>
-      The content and works created by the site operators on these pages are subject to German copyright law. The reproduction, editing, distribution, and any kind of use beyond the limits of copyright require the written consent of the respective author or creator. Downloads and copies of this site are only permitted for private, non-commercial use. Insofar as the content on this site was not created by the operator, the copyrights of third parties are respected. In particular, third-party content is marked as such. Should you nevertheless become aware of a copyright infringement, we request a corresponding notification. Upon becoming aware of legal violations, we will remove such content immediately.<br><br>
+      The content and works created by the site operators on these pages are subject to German copyright law. The
+      reproduction, editing, distribution, and any kind of use beyond the limits of copyright require the written
+      consent of the respective author or creator. Downloads and copies of this site are only permitted for private,
+      non-commercial use. Insofar as the content on this site was not created by the operator, the copyrights of third
+      parties are respected. In particular, third-party content is marked as such. Should you nevertheless become aware
+      of a copyright infringement, we request a corresponding notification. Upon becoming aware of legal violations, we
+      will remove such content immediately.<br><br>
       <strong>Data Protection</strong><br><br>
-      The use of our website is generally possible without providing personal data. Insofar as personal data (e.g., name, address, or email addresses) are collected on our pages, this is always done, as far as possible, on a voluntary basis. This data will not be passed on to third parties without your explicit consent.<br>
-      We point out that data transmission on the Internet (e.g., when communicating via email) can have security gaps. Complete protection of data against access by third parties is not possible.<br>
-      The use of contact data published as part of the legal notice obligation by third parties for the transmission of unsolicited advertising and informational materials is hereby expressly prohibited. The operators of these pages expressly reserve the right to take legal action in the event of unsolicited promotional information, such as spam emails.<br>
+      The use of our website is generally possible without providing personal data. Insofar as personal data (e.g.,
+      name, address, or email addresses) are collected on our pages, this is always done, as far as possible, on a
+      voluntary basis. This data will not be passed on to third parties without your explicit consent.<br>
+      We point out that data transmission on the Internet (e.g., when communicating via email) can have security gaps.
+      Complete protection of data against access by third parties is not possible.<br>
+      The use of contact data published as part of the legal notice obligation by third parties for the transmission of
+      unsolicited advertising and informational materials is hereby expressly prohibited. The operators of these pages
+      expressly reserve the right to take legal action in the event of unsolicited promotional information, such as spam
+      emails.<br>
       <br><br><strong>Google Analytics</strong><br><br>
-      This website uses Google Analytics, a web analytics service provided by Google Inc. ("Google"). Google Analytics uses "cookies," text files that are stored on your computer and enable an analysis of your use of the website. The information generated by the cookie about your use of this website (including your IP address) is transmitted to a Google server in the USA and stored there. Google will use this information to evaluate your use of the website, to compile reports on website activity for website operators, and to provide other services related to website activity and internet usage. Google may also transfer this information to third parties if required by law or if third parties process this data on behalf of Google. Google will not associate your IP address with any other data held by Google. You can prevent the installation of cookies by setting your browser software accordingly; however, please note that if you do this, you may not be able to use the full functionality of this website. By using this website, you consent to the processing of data about you by Google in the manner and for the purposes set out above.<br><br>
+      This website uses Google Analytics, a web analytics service provided by Google Inc. ("Google"). Google Analytics
+      uses "cookies," text files that are stored on your computer and enable an analysis of your use of the website. The
+      information generated by the cookie about your use of this website (including your IP address) is transmitted to a
+      Google server in the USA and stored there. Google will use this information to evaluate your use of the website,
+      to compile reports on website activity for website operators, and to provide other services related to website
+      activity and internet usage. Google may also transfer this information to third parties if required by law or if
+      third parties process this data on behalf of Google. Google will not associate your IP address with any other data
+      held by Google. You can prevent the installation of cookies by setting your browser software accordingly; however,
+      please note that if you do this, you may not be able to use the full functionality of this website. By using this
+      website, you consent to the processing of data about you by Google in the manner and for the purposes set out
+      above.<br><br>
       <strong>Google AdSense</strong><br><br>
-      This website uses Google AdSense, a web advertising service of Google Inc., USA ("Google"). Google AdSense uses "cookies" (text files) that are stored on your computer and enable an analysis of your use of the website. Google AdSense also uses "web beacons" (invisible graphics) to collect information. Through the use of web beacons, simple actions such as visitor traffic on the website can be recorded and collected. The information generated by the cookie and/or web beacon about your use of this website (including your IP address) is transmitted to a Google server in the USA and stored there. Google will use this information to evaluate your use of the website with regard to advertisements, to compile reports on website activity and advertisements for website operators, and to provide other services related to website and internet usage. Google may also transfer this information to third parties if required by law or if third parties process this data on behalf of Google. Google will not associate your IP address with any other data held by Google. You can prevent the storage of cookies on your hard drive and the display of web beacons by selecting "do not accept cookies" in your browser settings (in MS Internet Explorer under "Tools > Internet Options > Privacy > Settings"; in Firefox under "Tools > Options > Privacy > Cookies"); however, please note that if you do this, you may not be able to use the full functionality of this website. By using this website, you consent to the processing of data about you by Google in the manner and for the purposes set out above.
+      This website uses Google AdSense, a web advertising service of Google Inc., USA ("Google"). Google AdSense uses
+      "cookies" (text files) that are stored on your computer and enable an analysis of your use of the website. Google
+      AdSense also uses "web beacons" (invisible graphics) to collect information. Through the use of web beacons,
+      simple actions such as visitor traffic on the website can be recorded and collected. The information generated by
+      the cookie and/or web beacon about your use of this website (including your IP address) is transmitted to a Google
+      server in the USA and stored there. Google will use this information to evaluate your use of the website with
+      regard to advertisements, to compile reports on website activity and advertisements for website operators, and to
+      provide other services related to website and internet usage. Google may also transfer this information to third
+      parties if required by law or if third parties process this data on behalf of Google. Google will not associate
+      your IP address with any other data held by Google. You can prevent the storage of cookies on your hard drive and
+      the display of web beacons by selecting "do not accept cookies" in your browser settings (in MS Internet Explorer
+      under "Tools > Internet Options > Privacy > Settings"; in Firefox under "Tools > Options > Privacy > Cookies");
+      however, please note that if you do this, you may not be able to use the full functionality of this website. By
+      using this website, you consent to the processing of data about you by Google in the manner and for the purposes
+      set out above.
     </p><br>
-    Website imprint created by <a target="_blank" rel="noopener noreferrer" href="https://www.impressum-generator.de">impressum-generator.de</a> from <a target="_blank" rel="noopener noreferrer"
-      href="https://www.kanzlei-hasselbach.de/" rel="nofollow">Kanzlei Hasselbach</a>
+    Website imprint created by <a target="_blank" rel="noopener noreferrer"
+      href="https://www.impressum-generator.de">impressum-generator.de</a> from <a target="_blank"
+      rel="noopener noreferrer" href="https://www.kanzlei-hasselbach.de/" rel="nofollow">Kanzlei Hasselbach</a>
 
     <h3><a routerLink="/">Back to homepage</a></h3>
 
