--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -1,38 +1,37 @@
 .privacy-policy-section {
-    margin: 0 auto;
-    font-family: Poppins, sans-serif;
-    color: #FFFFFF;
-  
-    h1 {
-      font-size: 5.6rem;
-      margin-block-start: 0.1em;
-      margin-block-end: 0.1em;
-    }
-  
-    p {
-      line-height: 1.6;
-    }
-  
-    strong {
-      font-weight: bold;
-    }
-  
-    a {
-      text-decoration: none;
-      color: #00bf89;
-  
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-  
-    h3 a {
-      color: #00bf89;
-      font-size: 1.2rem;
+  margin: 0 auto;
+  font-family: Poppins, sans-serif;
+  color: #ffffff;
+
+  h1 {
+    font-size: 5.6rem;
+    margin-block-start: 0.1em;
+    margin-block-end: 0.1em;
+  }
+
+  p {
+    line-height: 1.6;
+  }
+
+  strong {
+    font-weight: bold;
+  }
+
+  a {
+    text-decoration: none;
+    color: #00bf89;
+
+    &:hover {
+      text-decoration: underline;
     }
   }
-  
-  .privacy-policy-wrapper {
-    padding: 100px 100px;
+
+  h3 a {
+    color: #00bf89;
+    font-size: 1.2rem;
   }
-  
+}
+
+.privacy-policy-wrapper {
+  padding: 100px 100px;
+}
